# IS.Copilot.Playbook

./: .gitignore  AI-Instructions.md  Agents.md  CONTRIBUTING.md  Prompt-Instruction-Agent-Comparison.md  README.md  azure-pipelines-pr-automation.yml  azure-pipelines-pr-simple.yml  mcp-verification-guide.md  requirements.txt  setup-all-mcp-servers.ps1  setup-global-mcp-servers.ps1  test-global-setup.ps1  verify-mcp-access.ps1
.github/: copilot-instructions.md
.github/agents/: security-pipeline.agent.md
.github/dotnet/: README.md
.github/javascript/: README.md
.github/python/: README.md
.github/shared/: README.md
.github/shared/skills/sql-injection-scanner/: DEPLOYMENT-OPTIONS.md  DEPLOYMENT-STRATEGY.md  MCP-DISTRIBUTION-GUIDE.md  QUICKSTART.md  README.md  SKILL.md  USAGE.md  azure-pipelines-example.yml  azure-pipelines.yml  cli.py  pipeline-template.yml  pyproject.toml  requirements.txt  run_tests.py  setup-mcp-server.ps1  setup.py  sql_scanner_mcp_server.py  test-report.html
.github/shared/skills/sql-injection-scanner/evals/: evals.json
.github/shared/skills/sql-injection-scanner/evals/test_files/: javascript_vulnerable.js
.github/shared/skills/sql-injection-scanner/examples/safe/: python_parameterized.py
.github/shared/skills/sql-injection-scanner/tools/: __init__.py  repositoryTool.py  securityTool.py
.github/workflows/: copilot-setup-steps.yml
Agents/: dotnet-upgrade.agent.md
docs/: README.md
docs/guides/: agents.md  mcp-setup.md  security-pipeline-template-implementation.md
presentation/: app.py  index.html  run.ps1
presentation/css/: styles.css
presentation/js/: app.js
security-reports/data-dashboard/: security-fixes-20260422.patch  security-report-20260422.html
tools/skill-creator/: .gitignore  SKILL.md
(+38 files in other folders)
