[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vancity-sql-injection-scanner"
version = "1.0.0"
description = "Automated SQL injection vulnerability scanner"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Vancity Platform Engineering", email = "platform-engineering@vancity.com"}
]
keywords = ["security", "sql-injection", "scanner", "static-analysis", "vulnerability-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "aiofiles>=23.1.0",
    "GitPython>=3.1.0",
    "requests>=2.28.0",
    "bandit>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
sql-scanner = "cli:cli_main"
sql-injection-scanner = "cli:cli_main"

[project.urls]
Homepage = "https://dev.azure.com/Vancity/Vancity/_git/IS.Copilot.Playbook"
Documentation = "https://dev.azure.com/Vancity/Vancity/_git/IS.Copilot.Playbook?path=/.github/shared/skills/sql-injection-scanner"
Repository = "https://dev.azure.com/Vancity/Vancity/_git/IS.Copilot.Playbook"

[tool.setuptools.packages.find]
exclude = ["tests*", "evals*", "examples*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
